@@ -4,6 +4,7 @@ Change log 1.4 (under development)
 * Fixed a bug in WhiteboxImpl#findUniqueConstructorOrThrowException which caused an additional constructor to be found a class was prepared for test (issue 189).
 * Fixed the maven assembly so that it now produces two full jar files, one for Mockito and one for EasyMock. These contains the sources as well.
 * Upgraded the Mockito extension API to support Mockito 1.8.1-rc1
+* java.lang.Object#getClass is no longer mockable by default. The reason is that it may lead to an unexpected method invocation exception using EasyMock in some equal implementations. It's possible to override this behavior.
 
 Change log 1.3.1 (released 2009-10-28)
 --------------------------------------
